# OnChipDataCompression

./: .gitignore  CMakeLists.txt  README.md
Algorithms/: BuildFile.xml
Algorithms/interface/: AlphabetStatistics.h  AlphabetStatisticsCollection.h  AlphabetStatisticsProducer.h  BlockPackageMaker.h  Chip.h  ChipDataEncoder.h  DeltaPackageMaker.h  DictionaryBuilder.h  HuffmanDecoder.h  HuffmanEncoder.h  HuffmanLetterCode.h  HuffmanTree.h  Package.h  PackageMaker.h  Pixel.h  exception.h
Algorithms/src/: Chip.cc  ChipDataEncoder.cc  DictionaryBuilder.cc
Algorithms/test/: BuildFile.xml  TestChipDataEncoder.cc  TestChipDataEncoder.py  TestDictionaryBuilder.cc  TestDictionaryBuilder.py
